<resources>
    <string name="app_name">Movie Baze</string>
    <string name="movie_title_hint">Enter Movie Title</string>
    <string name="enter_movie_year_hint">Enter Movie Year</string>
    <string name="enter_movie_director_hint">Enter Movie Director</string>
    <string name="enter_actors_actresses_hint">Enter Actors/Actresses</string>
    <string name="enter_rating_hint">Enter Rating</string>
    <string name="type_review_hint">Type Review</string>
    <string name="button_ratings_text">Button Ratings</string>
    <string name="register_movie_button_text">Register Movie</string>
    <string name="display_movie_button_text">Display Movies</string>
    <string name="display_favourites_button_text">Favourites</string>
    <string name="edit_movies_button_text">Edit Movies</string>
    <string name="search_button_text">Search</string>
    <string name="ratings_button_text">Ratings</string>
    <string name="favourite_text">Favourite</string>
    <string name="not_favourite_text">Not Favourite</string>
    <string name="home_image_des">Home Image</string>
    <string name="add_movie_header_text">Enter Movie Details to Add</string>
    <string name="edit_movies_header">Select a movie to Edit Details</string>
    <string name="movie_rating_text">Movie Rating</string>
    <string name="favourite_status_text">Favourite Status</string>
    <string name="movie_review_text">Movie Review</string>
    <string name="movie_actors_text">Movie Actors</string>
    <string name="movie_director_text">Movie Director</string>
    <string name="movie_year_text">Movie Year</string>
    <string name="movie_title_text">Movie Title</string>
    <string name="edit_movies2_header">Edit Selected Movie Details</string>
    <string name="update_text">Update</string>
    <string name="enter_a_keyword_text">Enter a keyword</string>
    <string name="lookup_button_text">Lookup</string>
    <string name="display_movies_header_text">Select Movies to Add as Favourites</string>
    <string name="add_to_favourites_button_text">Add to Favourites</string>
    <string name="find_movie_in_imdb_button_text">Find Movie in IMDB</string>
    <string name="ratings_header_text">Select a Movie to find Rating</string>
    <string name="display_rating_header_text">List of Movies in IMDB for selected Title</string>
    <string name="movie_image_des">Movie Image</string>
    <string name="favourite_movies_text">Favourite Movies</string>
    <string name="save_button_text">Save</string>
    <string name="search_message_text">Search Results appear here</string>
    <string name="search_movie_header_text">Search for a Movie</string>
</resources>