<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_image"
    tools:context=".SearchMovies">

    <TextView
        android:id="@+id/search_movie_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/styled_button_main"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:textSize="18sp"
        android:text="@string/search_movie_header_text" />

    <EditText
        android:id="@+id/enterString"
        android:background="@drawable/input_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:ems="10"
        android:layout_below="@+id/search_movie_header"
        android:textSize="14sp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_a_keyword_text"
        android:autofillHints=""/>

    <TextView
        android:id="@+id/message_search_movies"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:layout_below="@+id/enterString"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/search_message_text"
        android:textColor="#E8A5E5"
        android:background="@drawable/styled_image_views"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/linearLayout1_search_movies"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_below="@+id/enterString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ListView
            android:id="@+id/list_item_search_movies"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scrollbars="none"
            android:background="@drawable/styled_image_views"
            android:layout_gravity="center_horizontal">
        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/button_lookup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="getData"
        android:textColor="#FFFFFF"
        android:text="@string/lookup_button_text"
        android:background="@drawable/styled_button_main"
        android:textAllCaps="false" />

</RelativeLayout>